static/styles.css
@font-face {
    font-family: "Montserrat";
    src: url("font/Montserrat-Regular.otf");
}
@font-face {
    font-family: "Montserrat";
    src: url("font/Montserrat-Bold.otf");
    font-weight: bold;
}

body {
    background-color: var(--primary);
    color: var(--font);
    margin: 0;
    font-family: "Montserrat";
    height: 100%;
    width: 100%;
    font-size: var(--font-size);
}

a {
    font-size: var(--font-size);
    color: var(--font);
}

hr {
    width: 100%;
}

nav {
    background-color: var(--primary-light);
    display: flex;
    flex-direction: row;
    align-items: center;
    padding: 10px 5px;
}

:root {
    --primary: #000000;
    --primary-light: #111111;
    --font: #FCFBFE;
    --red: #DC3545;
    --font-size: 15pt;

    --accent: #ecdd00;
}

/* ------------------- */

#nav-icon {
    width: 35px;
    filter: invert(100%);
}

#nav-title {
    text-decoration: none;
    color: var(--accent);
}

.nav-text {
    font-size: 20pt;
    color: var(--font);
}

#nav-logout {
    float: right;
    color: var(--red);
    padding: 5px 10px;
    border: 1px solid var(--red);
    border-radius: 10px;
    text-decoration: none;
}

#nav-logout:hover {
    background-color: var(--red);
    color: var(--font);
    transition: .2s;
}

.nav-right {
    flex: 1;
    display: flex;
    flex-direction: row;
    align-items: center;
}

.nav-left {
    flex: 10;
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 5px;
}

/* ------------------- */

.center-box {
    background-color: #252525;
    border: 1px solid var(--font);
    border-radius: 15px;
    display: flex;
    flex-direction: column;
    max-width: 500px;
    padding: 50px 40px;
    gap: 10px;
    text-align: center;
}

.center-screen {
    display: flex;
    height: 100vh;
    width: 100vw;
    flex-direction: column;
}

#login-form, #signup-form {
    margin: auto;
}

form input, form textarea {
    background-color: var(--primary-light);
    border: 1px solid var(--font);
    color: var(--font);
    font-size: var(--font-size);
    border-radius: 8px;
    padding: 5px 10px;
}

form button {
    background-color: var(--primary-light);
    border: 1px solid var(--font);
    color: var(--font);
    font-size: var(--font-size);
    padding: 5px 10px;
    border-radius: 8px;
}

form button:hover {
    cursor: pointer;
    background-color: var(--font);
    border: 1px solid var(--primary-light);
    color: var(--primary-light);
    font-size: var(--font-size);
}

form input:focus, form textarea:focus {
    outline: none;
    background-color: var(--font);
    color: var(--primary-light);
}

#noacc-link {
    font-size: calc(var(--font-size) - 4pt);
}

/* ------------ CREATE FROM ------------ */

#create-form {
    display: flex;
    flex-direction: column;
    padding: 15px 20px;
    gap: 10px;
    height: 80vh;
}

#create-form input, #create-form textarea {
    background-color: var(--primary);
    border: none;
}

#create-form input::placeholder, #create-form textarea::placeholder {
    opacity: 0.3;
}

#create-form input:focus, #create-form textarea:focus {
    color: var(--font);
}

#create-form textarea {
    resize: vertical;
    align-self: stretch;
}

#create-form button {
    background-color: var(--primary);
    border-radius: none;
}

#create-form button:hover {
    color: var(--primary-light);
    border-color: var(--font);
    background-color: var(--font);
}

#create-title {
    font-weight: bold;
    font-size: calc(var(--font-size) + 5pt);
}

#create-text {
    align-self: stretch;
    flex-grow: 1;
}

/* ------------ NOTES LIST ------------ */

#notes {
    display: flex;
    flex-direction: column;
    background-color: var(--primary-light);
    border-radius: 15px;
    margin: 10px 20px;
    padding: 20px 0;
}

#notes hr {
    opacity: 0.3;
    margin: 20px 0;
}

.note-info {
    display: flex;
    flex-direction: column;
    gap: 5px;
    flex-grow: 1;
}

.note-prev {
    padding: 0 20px;
    display: flex;
    flex-direction: row;
    align-items: center;
}

.note-prev-title {
    cursor: pointer;
    font-weight: bold;
    font-size: calc(var(--font-size) - 2pt);
}

.note-prev-created {
    font-size: calc(var(--font-size) - 5pt);
    opacity: 0.4;
}

/* ------------ FLOATING ACTIONS ------------ */

#floating-actions {
    position: fixed;
    bottom: 20px;
    right: 10px;
    color: var(--font);
}

#floating-create {
    background-color: var(--primary);
    color: var(--font);
    border: 2px solid var(--font);
    padding: 10px;
    border-radius: 50%;
    font-size: 15pt;
    opacity: 80%;
    text-decoration: none;
}

/* ------------ MESSAGES ------------ */

#messages-feed {
    display: flex;
    flex-direction: column;
    gap: 5px;
    text-align: center;
}

.message {
    background-color: var(--red);
    color: var(--font);
    padding: 5px 10px;
}

.message-close {
    float: right;
}

.message-close:hover {
    cursor: pointer;
}

